feat(sui): proper port parsing in voyager
Signed-off-by: aeryz <abdullaheryz@protonmail.com>

--- a/voyager/plugins/transaction/sui/Cargo.toml
+++ b/voyager/plugins/transaction/sui/Cargo.toml
@@ -33,3 +33,4 @@ tracing     = { workspace = true }
 ucs03-zkgm  = { workspace = true, features = ["library"] }
 unionlabs   = { workspace = true }
 voyager-sdk = { workspace = true }
+reqwest = { workspace = true, features = [ "rustls-tls" ] }
