--- a/lib/sui-verifier/Cargo.toml
+++ b/lib/sui-verifier/Cargo.toml
@@ -16,5 +16,9 @@ typenum                = { workspace = true }
 unionlabs              = { workspace = true }
 unionlabs-primitives   = { workspace = true }
 
+[dev-dependencies]
+hex-literal = { workspace = true }
+wasm-bindgen-test = "0.3.0"
+
 [lints]
 workspace = true
