--- a/sui/ibc/Move.toml
+++ b/sui/ibc/Move.toml
@@ -19,7 +19,7 @@ name    = "ibc"
 # Override = { local = "../conflicting/version", override = true }
 
 [addresses]
-ibc = "_"
+ibc = "0x0"
 
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
