chore(sui): bunch more changes
Signed-off-by: aeryz <abdullaheryz@protonmail.com>

--- a/voyager/modules/client-bootstrap/sui/Cargo.toml
+++ b/voyager/modules/client-bootstrap/sui/Cargo.toml
@@ -26,3 +26,4 @@ tokio                  = { workspace = true }
 tracing                = { workspace = true }
 unionlabs              = { workspace = true }
 voyager-sdk            = { workspace = true }
+hex-literal            = { workspace = true }
