--- a/voyager/modules/client/cometbls/Cargo.toml
+++ b/voyager/modules/client/cometbls/Cargo.toml
@@ -13,8 +13,6 @@ workspace = true
 
 [dependencies]
 alloy-sol-types             = { workspace = true }
-ark-bn254                   = { version = "0.4", default-features = false, features = ["curve"] }
-ark-serialize               = "0.4.2"
 cometbls-light-client-types = { workspace = true, features = ["proto", "ethabi", "serde", "bincode"] }
 embed-commit                = { workspace = true }
 jsonrpsee                   = { workspace = true, features = ["macros", "server", "tracing"] }
@@ -27,6 +25,7 @@ tokio                       = { workspace = true }
 tracing                     = { workspace = true }
 unionlabs                   = { workspace = true, features = ["bincode", "bcs"] }
 voyager-sdk                 = { workspace = true }
+gnark-key-parser            = { workspace = true }
 
 
 [dev-dependencies]
