--- a/lib/sui-light-client-types/Cargo.toml
+++ b/lib/sui-light-client-types/Cargo.toml
@@ -25,6 +25,7 @@ thiserror            = { workspace = true }
 typenum              = { workspace = true }
 unionlabs            = { workspace = true }
 unionlabs-primitives = { workspace = true, features = ["base58"] }
+frame-support-procedural = { workspace = true }
 
 [dev-dependencies]
 hex-literal = { workspace = true }
