--- a/lib/ucs03-zkgm-packet/Cargo.toml
+++ b/lib/ucs03-zkgm-packet/Cargo.toml
@@ -12,9 +12,9 @@ repository   = { workspace = true }
 workspace = true
 
 [dependencies]
-alloy-sol-types.workspace = true
-enumorph.workspace = true
-hex-literal.workspace = true
-serde      = { workspace = true, features = ["derive"] }
-ucs03-zkgm = { workspace = true }
-unionlabs-primitives.workspace = true
+alloy-sol-types      = { workspace = true }
+enumorph             = { workspace = true }
+hex-literal          = { workspace = true }
+serde                = { workspace = true, features = ["derive"] }
+ucs03-zkgm           = { workspace = true }
+unionlabs-primitives = { workspace = true }
